force-app/main/default/objects/Case_Plan__c/Case_Plan__c.object-meta.xml
<CustomObject>
    <label>Case Plan</label>
    <nameField>
        <label>Case Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Case Plans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>