force-app/main/default/objects/Case_Plan__c/fields/CaseStatusOrdering__c.field-meta.xml
<CustomField>
    <fullName>CaseStatusOrdering__c</fullName>
    <label>Case Status Ordering</label>
    <length>255</length>
    <type>Text</type>
</CustomField>