force-app/main/default/objects/Case_Plan__c/fields/RecordType_SupportProcess__c.field-meta.xml
<CustomField>
    <fullName>RecordType_SupportProcess__c</fullName>
    <label>Record Type / Support Process</label>
    <length>255</length>
    <type>Text</type>
</CustomField>