force-app/main/default/objects/Case_Plan__c/fields/RecordTypeId__c.field-meta.xml
<CustomField>
    <fullName>RecordTypeId__c</fullName>
    <label>Record Type Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>